tests/baselines/reference/grammarAmbiguities1.errors.txt
tests/cases/compiler/grammarAmbiguities1.ts(8,1): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/grammarAmbiguities1.ts(9,1): error TS2554: Expected 1 arguments, but got 2.


==== tests/cases/compiler/grammarAmbiguities1.ts (2 errors) ====
    class A { foo() { } }
    class B { bar() { }}
    function f(x) { return x; }
    function g<T, U>(x) { return f(x); }
    g<A, B>(7)
    
    f(g<A, B>(7));
    f(g < A, B > 7);
    ~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    f(g < A, B > +(7));
    ~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    